--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:10:11 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:10:54 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-16</td>
+      <td class="bigbold">-17</td>
       <td>Scottie Scheffler(W) -8
 Not started</td>
       <td>Hideki Matsuyama -3
 Not started</td>
       <td>Cameron Smith -2
 Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
+      <td>Will Zalatoris -2
+-1 thru 1</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -157,15 +157,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-14</td>
+      <td class="bigbold">-15</td>
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Shane Lowry -3
 Not started</td>
       <td>Justin Thomas(W) -2
 -1 thru 2</td>
-      <td>Will Zalatoris -1
-Not started</td>
+      <td>Will Zalatoris -2
+-1 thru 1</td>
       <td class="greyout leftborder">Patrick Cantlay +2
 +1 thru 4</td>
       <td class="greyout">Tony Finau +4
@@ -189,18 +189,34 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-12</td>
+      <td class="bigbold">-13</td>
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Cameron Smith(W) -2
 Not started</td>
+      <td>Will Zalatoris -2
+-1 thru 1</td>
       <td>Corey Conners -1
-Not started</td>
-      <td>Will Zalatoris -1
 Not started</td>
       <td class="greyout leftborder">Russell Henley +4
 +1 thru 11</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">-11</td>
+      <td>Scottie Scheffler -8
+Not started</td>
+      <td>Will Zalatoris -2
+-1 thru 1</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Webb Simpson E
+-1 thru 4</td>
+      <td class="greyout leftborder">Jon Rahm(W) +3
++1 thru 7</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -220,19 +236,35 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">Mark MacKave</td>
+      <td class="bigbold">-11</td>
       <td>Scottie Scheffler -8
 Not started</td>
+      <td>Cameron Smith -2
+Not started</td>
+      <td>Will Zalatoris -2
+-1 thru 1</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Will Zalatoris -1
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 15</td>
+      <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">-10</td>
+      <td>Scottie Scheffler(W) -8
 Not started</td>
-      <td>Webb Simpson E
--1 thru 4</td>
-      <td class="greyout leftborder">Jon Rahm(W) +3
+      <td>Will Zalatoris -2
+-1 thru 1</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Jon Rahm +3
 +1 thru 7</td>
-      <td class="greyout">Xander Schauffele
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -252,35 +284,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Mark MacKave</td>
-      <td class="bigbold">-10</td>
-      <td>Scottie Scheffler -8
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-9</td>
+      <td>Shane Lowry -3
 Not started</td>
+      <td>Justin Thomas(W) -2
+-1 thru 2</td>
       <td>Cameron Smith -2
 Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 thru 15</td>
-      <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-9</td>
-      <td>Scottie Scheffler(W) -8
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Jon Rahm +3
-+1 thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
+      <td>Will Zalatoris -2
+-1 thru 1</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick -1
+-1 thru 4</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -345,22 +361,6 @@ Not started</td>
       <td class="greyout leftborder">Marc Leishman +2
 -2 thru 14</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-8</td>
-      <td>Shane Lowry -3
-Not started</td>
-      <td>Justin Thomas(W) -2
--1 thru 2</td>
-      <td>Cameron Smith -2
-Not started</td>
-      <td>Matthew Fitzpatrick -1
--1 thru 4</td>
-      <td class="greyout leftborder">Will Zalatoris -1
-Not started</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -493,13 +493,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-4</td>
       <td>Justin Thomas(W) -2
 -1 thru 2</td>
       <td>Cameron Smith -2
 Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
+      <td>Will Zalatoris -2
+-1 thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -509,12 +509,12 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-3</td>
       <td>Cameron Smith -2
 Not started</td>
+      <td>Will Zalatoris -2
+-1 thru 1</td>
       <td>Corey Conners -1
-Not started</td>
-      <td>Will Zalatoris -1
 Not started</td>
       <td>Patrick Cantlay +2
 +1 thru 4</td>
@@ -522,6 +522,54 @@ Not started</td>
 +1 thru 7</td>
       <td class="greyout">Viktor Hovland +3
 -1 thru 15</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-3</td>
+      <td>Justin Thomas -2
+-1 thru 2</td>
+      <td>Will Zalatoris -2
+-1 thru 1</td>
+      <td>Collin Morikawa -1
+Not started</td>
+      <td>Rory McIlroy +2
+E thru 8</td>
+      <td class="greyout leftborder">Tiger Woods(W) +3
++2 thru 5</td>
+      <td class="greyout">Viktor Hovland +3
+-1 thru 15</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jabby</td>
+      <td class="bigbold">-3</td>
+      <td>Justin Thomas(W) -2
+-1 thru 2</td>
+      <td>Will Zalatoris -2
+-1 thru 1</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Rory McIlroy +2
+E thru 8</td>
+      <td class="greyout leftborder">Jon Rahm +3
++1 thru 7</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -2
+Not started</td>
+      <td>Will Zalatoris -2
+-1 thru 1</td>
+      <td>Corey Conners(W) -1
+Not started</td>
+      <td>Jon Rahm +3
++1 thru 7</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -537,38 +585,6 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-2</td>
-      <td>Justin Thomas -2
--1 thru 2</td>
-      <td>Collin Morikawa -1
-Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Rory McIlroy +2
-E thru 8</td>
-      <td class="greyout leftborder">Tiger Woods(W) +3
-+2 thru 5</td>
-      <td class="greyout">Viktor Hovland +3
--1 thru 15</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jabby</td>
-      <td class="bigbold">-2</td>
-      <td>Justin Thomas(W) -2
--1 thru 2</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Rory McIlroy +2
-E thru 8</td>
-      <td class="greyout leftborder">Jon Rahm +3
-+1 thru 7</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -604,22 +620,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith -2
-Not started</td>
-      <td>Corey Conners(W) -1
-Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Jon Rahm +3
-+1 thru 7</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">0</td>
       <td>Hideki Matsuyama -3
@@ -633,6 +633,22 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Grace</td>
+      <td class="bigbold">0</td>
+      <td>Will Zalatoris -2
+-1 thru 1</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Collin Morikawa -1
+Not started</td>
+      <td>Rory McIlroy +2
+E thru 8</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 thru 15</td>
+      <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
     <tr>
@@ -668,19 +684,35 @@ Out With Injury</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">1</td>
-      <td>Corey Conners -1
-Not started</td>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">2</td>
+      <td>Will Zalatoris -2
+-1 thru 1</td>
       <td>Collin Morikawa -1
 Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Rory McIlroy +2
-E thru 8</td>
-      <td class="greyout leftborder">Viktor Hovland +3
+      <td>Patrick Cantlay +2
++1 thru 4</td>
+      <td>Viktor Hovland(W) +3
 -1 thru 15</td>
-      <td class="greyout">Xander Schauffele(W)
+      <td class="greyout leftborder">Jon Rahm +3
++1 thru 7</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">2</td>
+      <td>Justin Thomas(W) -2
+-1 thru 2</td>
+      <td>Will Zalatoris -2
+-1 thru 1</td>
+      <td>Viktor Hovland +3
+-1 thru 15</td>
+      <td>Jon Rahm +3
++1 thru 7</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -716,19 +748,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">3</td>
-      <td>Collin Morikawa -1
-Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Patrick Cantlay +2
-+1 thru 4</td>
-      <td>Viktor Hovland(W) +3
--1 thru 15</td>
-      <td class="greyout leftborder">Jon Rahm +3
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">2</td>
+      <td>Justin Thomas -2
+-1 thru 2</td>
+      <td>Will Zalatoris -2
+-1 thru 1</td>
+      <td>Jon Rahm(W) +3
 +1 thru 7</td>
-      <td class="greyout">Xander Schauffele
+      <td>Viktor Hovland +3
+-1 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -745,38 +777,6 @@ Not started</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">3</td>
-      <td>Justin Thomas(W) -2
--1 thru 2</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Viktor Hovland +3
--1 thru 15</td>
-      <td>Jon Rahm +3
-+1 thru 7</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">3</td>
-      <td>Justin Thomas -2
--1 thru 2</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Jon Rahm(W) +3
-+1 thru 7</td>
-      <td>Viktor Hovland +3
--1 thru 15</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
