--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:10:11 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:10:54 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-14</td>
+      <td class="bigbold">-15</td>
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Shane Lowry -3
 Not started</td>
       <td>Justin Thomas(W) -2
 -1 thru 2</td>
-      <td>Will Zalatoris -1
-Not started</td>
+      <td>Will Zalatoris -2
+-1 thru 1</td>
       <td class="greyout leftborder">Patrick Cantlay +2
 +1 thru 4</td>
       <td class="greyout">Tony Finau +4
@@ -157,13 +157,13 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-12</td>
       <td>Scottie Scheffler(W) -8
 Not started</td>
       <td>Shane Lowry -3
 Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
+      <td>Will Zalatoris -2
+-1 thru 1</td>
       <td>Jon Rahm +3
 +1 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -173,17 +173,17 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-9</td>
       <td>Shane Lowry -3
 Not started</td>
       <td>Justin Thomas(W) -2
 -1 thru 2</td>
       <td>Cameron Smith -2
 Not started</td>
-      <td>Matthew Fitzpatrick -1
+      <td>Will Zalatoris -2
+-1 thru 1</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick -1
 -1 thru 4</td>
-      <td class="greyout leftborder">Will Zalatoris -1
-Not started</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -253,12 +253,12 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">-1</td>
       <td>Justin Thomas(W) -2
 -1 thru 2</td>
+      <td>Will Zalatoris -2
+-1 thru 1</td>
       <td>Collin Morikawa -1
-Not started</td>
-      <td>Will Zalatoris -1
 Not started</td>
       <td>Tony Finau +4
 +2 thru 10</td>
