--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:20:56 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:21:39 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -358,8 +358,8 @@ Not started</td>
 Not started</td>
       <td>Viktor Hovland(W) +3
 -1 thru 16</td>
-      <td class="greyout leftborder">Tyrrell Hatton +6
-+4 thru 7</td>
+      <td class="greyout leftborder">Tyrrell Hatton +5
++3 thru 8</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
@@ -406,10 +406,10 @@ Not started</td>
 +1 thru 5</td>
       <td>Rory McIlroy +2
 E thru 9</td>
-      <td class="greyout leftborder">Robert MacIntyre +3
-+1 thru 6</td>
-      <td class="greyout">Jon Rahm +3
+      <td class="greyout leftborder">Jon Rahm +3
 +1 thru 7</td>
+      <td class="greyout">Robert MacIntyre +4
++2 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -780,22 +780,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">4</td>
-      <td>Corey Conners(W) -1
-Not started</td>
-      <td>Collin Morikawa -1
-E thru 1</td>
-      <td>Robert MacIntyre +3
-+1 thru 6</td>
-      <td>Jon Rahm +3
-+1 thru 7</td>
-      <td class="greyout leftborder">Daniel Berger +5
-+3 thru 10</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">4</td>
       <td>Justin Thomas -3
@@ -839,8 +823,24 @@ Missed Cut</td>
       <td>Jon Rahm +3
 +1 thru 7</td>
       <td class="greyout leftborder">Daniel Berger +5
-+3 thru 10</td>
++3 thru 11</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">5</td>
+      <td>Corey Conners(W) -1
+Not started</td>
+      <td>Collin Morikawa -1
+E thru 1</td>
+      <td>Jon Rahm +3
++1 thru 7</td>
+      <td>Robert MacIntyre +4
++2 thru 7</td>
+      <td class="greyout leftborder">Daniel Berger +5
++3 thru 11</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
