--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:22:22 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:23:06 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -181,7 +181,7 @@ Not started</td>
       <td>Shane Lowry -3
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -197,7 +197,7 @@ Not started</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Russell Henley +6
 +3 thru 12</td>
       <td class="greyout">Brooks Koepka
@@ -211,11 +211,11 @@ Not started</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Webb Simpson E
 -1 thru 5</td>
       <td class="greyout leftborder">Jon Rahm(W) +3
-+1 thru 7</td>
++1 thru 8</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -245,7 +245,7 @@ Not started</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 thru 16</td>
       <td class="greyout">Xander Schauffele(W)
@@ -259,9 +259,9 @@ Not started</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +3
-+1 thru 7</td>
++1 thru 8</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -275,9 +275,9 @@ Not started</td>
       <td>Cameron Smith(W) -2
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Talor Gooch +1
--1 thru 10</td>
+-1 thru 11</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -309,7 +309,7 @@ Not started</td>
       <td>Cameron Smith(W) -2
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Marc Leishman +2
 -2 thru 16</td>
       <td class="greyout">Xander Schauffele
@@ -325,11 +325,11 @@ Not started</td>
       <td>Cameron Smith(W) -2
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 thru 16</td>
       <td class="greyout">Jon Rahm +3
-+1 thru 7</td>
++1 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -355,7 +355,7 @@ Not started</td>
       <td>Cameron Smith -2
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland(W) +3
 -1 thru 16</td>
       <td class="greyout leftborder">Tyrrell Hatton +5
@@ -373,7 +373,7 @@ Not started</td>
       <td>Cameron Smith -2
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Patrick Cantlay +2
 +1 thru 5</td>
       <td class="greyout">Louis Oosthuizen
@@ -401,13 +401,13 @@ Missed Cut</td>
       <td>Scottie Scheffler(W) -8
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 5</td>
       <td>Rory McIlroy +2
 E thru 9</td>
       <td class="greyout leftborder">Jon Rahm +3
-+1 thru 7</td>
++1 thru 8</td>
       <td class="greyout">Robert MacIntyre +4
 +2 thru 7</td>
     </tr>
@@ -483,11 +483,11 @@ Not started</td>
       <td>Cameron Smith -2
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Talor Gooch +1
--1 thru 10</td>
+-1 thru 11</td>
       <td class="greyout leftborder">Jon Rahm(W) +3
-+1 thru 7</td>
++1 thru 8</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -497,13 +497,13 @@ Missed Cut</td>
       <td>Scottie Scheffler -8
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay(W) +2
 +1 thru 5</td>
       <td>Viktor Hovland +3
 -1 thru 16</td>
       <td class="greyout leftborder">Jon Rahm +3
-+1 thru 7</td>
++1 thru 8</td>
       <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
@@ -531,11 +531,11 @@ E thru 9</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy +2
 E thru 9</td>
       <td class="greyout leftborder">Jon Rahm +3
-+1 thru 7</td>
++1 thru 8</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -547,11 +547,11 @@ Not started</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 5</td>
       <td class="greyout leftborder">Jon Rahm(W) +3
-+1 thru 7</td>
++1 thru 8</td>
       <td class="greyout">Viktor Hovland +3
 -1 thru 16</td>
     </tr>
@@ -563,7 +563,7 @@ Not started</td>
       <td>Cameron Smith(W) -2
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +3
 -1 thru 16</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -579,9 +579,9 @@ Not started</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td>Corey Conners(W) -1
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +3
-+1 thru 7</td>
++1 thru 8</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -609,7 +609,7 @@ Missed Cut</td>
       <td>Shane Lowry(W) -3
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Joaquin Niemann -1
 E thru 2</td>
       <td>Viktor Hovland +3
@@ -629,7 +629,7 @@ Not started</td>
       <td>Patrick Cantlay +2
 +1 thru 5</td>
       <td>Jon Rahm(W) +3
-+1 thru 7</td>
++1 thru 8</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -641,7 +641,7 @@ Missed Cut</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Collin Morikawa -1
 E thru 1</td>
       <td>Rory McIlroy +2
@@ -659,7 +659,7 @@ Not started</td>
       <td>Rory McIlroy +2
 E thru 9</td>
       <td>Jon Rahm(W) +3
-+1 thru 7</td>
++1 thru 8</td>
       <td>Viktor Hovland +3
 -1 thru 16</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -677,7 +677,7 @@ E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 5</td>
       <td>Jon Rahm +3
-+1 thru 7</td>
++1 thru 8</td>
       <td class="greyout leftborder">Paul Casey
 Out With Injury</td>
       <td class="greyout">Jordan Spieth
@@ -693,7 +693,7 @@ Missed Cut</td>
       <td>Viktor Hovland +3
 -1 thru 16</td>
       <td>Jon Rahm +3
-+1 thru 7</td>
++1 thru 8</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -721,11 +721,11 @@ Missed Cut</td>
       <td>Justin Thomas -3
 -2 thru 3</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy +2
 E thru 9</td>
       <td>Jon Rahm(W) +3
-+1 thru 7</td>
++1 thru 8</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -739,7 +739,7 @@ Missed Cut</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td>Jon Rahm(W) +3
-+1 thru 7</td>
++1 thru 8</td>
       <td>Viktor Hovland +3
 -1 thru 16</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -759,7 +759,7 @@ E thru 1</td>
       <td>Viktor Hovland(W) +3
 -1 thru 16</td>
       <td class="greyout leftborder">Jon Rahm +3
-+1 thru 7</td>
++1 thru 8</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -769,9 +769,9 @@ Missed Cut</td>
       <td>Cameron Smith -2
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm(W) +3
-+1 thru 7</td>
++1 thru 8</td>
       <td>Tiger Woods +3
 +2 thru 6</td>
       <td class="greyout leftborder">Sam Burns
@@ -789,7 +789,7 @@ Missed Cut</td>
       <td>Rory McIlroy +2
 E thru 9</td>
       <td>Jon Rahm +3
-+1 thru 7</td>
++1 thru 8</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -807,7 +807,7 @@ E thru 9</td>
       <td>Viktor Hovland +3
 -1 thru 16</td>
       <td class="greyout leftborder">Jon Rahm +3
-+1 thru 7</td>
++1 thru 8</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -821,7 +821,7 @@ Missed Cut</td>
       <td>Viktor Hovland +3
 -1 thru 16</td>
       <td>Jon Rahm +3
-+1 thru 7</td>
++1 thru 8</td>
       <td class="greyout leftborder">Daniel Berger +5
 +3 thru 11</td>
       <td class="greyout">Xander Schauffele
@@ -831,11 +831,11 @@ Missed Cut</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">5</td>
       <td>Corey Conners(W) -1
-Not started</td>
+E thru 1</td>
       <td>Collin Morikawa -1
 E thru 1</td>
       <td>Jon Rahm +3
-+1 thru 7</td>
++1 thru 8</td>
       <td>Robert MacIntyre +4
 +2 thru 7</td>
       <td class="greyout leftborder">Daniel Berger +5
@@ -867,7 +867,7 @@ Not started</td>
       <td>Rory McIlroy +2
 E thru 9</td>
       <td>Jon Rahm(W) +3
-+1 thru 7</td>
++1 thru 8</td>
       <td>Viktor Hovland +3
 -1 thru 16</td>
       <td class="greyout leftborder">Bubba Watson +7
@@ -885,7 +885,7 @@ Not started</td>
       <td>Viktor Hovland +3
 -1 thru 16</td>
       <td>Jon Rahm +3
-+1 thru 7</td>
++1 thru 8</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -899,7 +899,7 @@ E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 5</td>
       <td>Jon Rahm(W) +3
-+1 thru 7</td>
++1 thru 8</td>
       <td>Tony Finau +4
 +2 thru 11</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -915,7 +915,7 @@ E thru 1</td>
       <td>Viktor Hovland(W) +3
 -1 thru 16</td>
       <td>Jon Rahm +3
-+1 thru 7</td>
++1 thru 8</td>
       <td>Patrick Reed +4
 +1 thru 12</td>
       <td class="greyout leftborder">Brooks Koepka
