--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:22:22 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 2:23:06 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -165,7 +165,7 @@ Not started</td>
       <td>Will Zalatoris -2
 -1 thru 1</td>
       <td>Jon Rahm +3
-+1 thru 7</td>
++1 thru 8</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -195,11 +195,11 @@ Missed Cut</td>
       <td>Shane Lowry -3
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 5</td>
       <td class="greyout leftborder">Jon Rahm +3
-+1 thru 7</td>
++1 thru 8</td>
       <td class="greyout">Tyrrell Hatton +5
 +3 thru 8</td>
     </tr>
@@ -243,7 +243,7 @@ E thru 9</td>
       <td>Cameron Smith(W) -2
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland +3
 -1 thru 16</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -291,7 +291,7 @@ Missed Cut</td>
       <td>Dustin Johnson -2
 Not started</td>
       <td>Corey Conners -1
-Not started</td>
+E thru 1</td>
       <td>Russell Henley +6
 +3 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele(W)
@@ -303,11 +303,11 @@ Missed Cut</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">5</td>
       <td>Corey Conners(W) -1
-Not started</td>
+E thru 1</td>
       <td>Collin Morikawa -1
 E thru 1</td>
       <td>Jon Rahm +3
-+1 thru 7</td>
++1 thru 8</td>
       <td>Robert MacIntyre +4
 +2 thru 7</td>
       <td class="greyout leftborder">Daniel Berger +5
@@ -323,7 +323,7 @@ E thru 1</td>
       <td>Patrick Cantlay +2
 +1 thru 5</td>
       <td>Jon Rahm(W) +3
-+1 thru 7</td>
++1 thru 8</td>
       <td>Tony Finau +4
 +2 thru 11</td>
       <td class="greyout leftborder">Jordan Spieth
@@ -341,7 +341,7 @@ Not started</td>
       <td>Viktor Hovland +3
 -1 thru 16</td>
       <td>Jon Rahm +3
-+1 thru 7</td>
++1 thru 8</td>
       <td class="greyout leftborder">Jordan Spieth(W)
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
@@ -355,7 +355,7 @@ E thru 1</td>
       <td>Viktor Hovland(W) +3
 -1 thru 16</td>
       <td>Jon Rahm +3
-+1 thru 7</td>
++1 thru 8</td>
       <td>Patrick Reed +4
 +1 thru 12</td>
       <td class="greyout leftborder">Brooks Koepka
